--- a/src/main/react-app/public/index.html
+++ b/src/main/react-app/public/index.html
@@ -6,13 +6,17 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Hello World!</title>
+    <link rel="stylesheet" href="./style.css">    
+    <title>ToDo App</title>
 </head>
 <body>
 <noscript>
     You need to enable JavaScript to run this app.
 </noscript>
-<div id="title"></div>
-<div id="client"></div>
+ <section class="tasks">        
+    <div id="title"></div>
+    <div id="client"></div>
+</section>    
+</div>
 </body>
 </html>
